--- a/index.html
+++ b/index.html
@@ -285,14 +285,15 @@
                     </div>
                     <div class="col-11 m-0-5-auto">
                       <div class="row cursor-pointer services-learn-more-row">
-                        <div class="col-8 services-learn-more font-weight-500">
-                          Read More
-                        </div>
                         <div
-                          class="col-4 services-learn-more-arrow font-weight-500"
-                          dir="rtl"
+                          class="col-12 m-auto font-weight-500 position-relative"
                         >
-                          <i class="fas fa-arrow-right"></i>
+                          <div class="left-card-button">Read More</div>
+                          <div class="right-card-button">&nbsp;</div>
+                          <div class="right-cart-rectangle">&nbsp;</div>
+                          <div class="card-arrow-i">
+                            <i class="fas fa-arrow-right"></i>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -320,14 +321,15 @@
                     </div>
                     <div class="col-11 m-0-5-auto">
                       <div class="row cursor-pointer services-learn-more-row">
-                        <div class="col-8 services-learn-more font-weight-500">
-                          Read More
-                        </div>
                         <div
-                          class="col-4 services-learn-more-arrow font-weight-500"
-                          dir="rtl"
+                          class="col-12 m-auto font-weight-500 position-relative"
                         >
-                          <i class="fas fa-arrow-right"></i>
+                          <div class="left-card-button">Read More</div>
+                          <div class="right-card-button">&nbsp;</div>
+                          <div class="right-cart-rectangle">&nbsp;</div>
+                          <div class="card-arrow-i">
+                            <i class="fas fa-arrow-right"></i>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -355,14 +357,15 @@
                     </div>
                     <div class="col-11 m-0-5-auto">
                       <div class="row cursor-pointer services-learn-more-row">
-                        <div class="col-8 services-learn-more font-weight-500">
-                          Read More
-                        </div>
                         <div
-                          class="col-4 services-learn-more-arrow font-weight-500"
-                          dir="rtl"
+                          class="col-12 m-auto font-weight-500 position-relative"
                         >
-                          <i class="fas fa-arrow-right"></i>
+                          <div class="left-card-button">Read More</div>
+                          <div class="right-card-button">&nbsp;</div>
+                          <div class="right-cart-rectangle">&nbsp;</div>
+                          <div class="card-arrow-i">
+                            <i class="fas fa-arrow-right"></i>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -390,14 +393,15 @@
                     </div>
                     <div class="col-11 m-0-5-auto">
                       <div class="row cursor-pointer services-learn-more-row">
-                        <div class="col-8 services-learn-more font-weight-500">
-                          Read More
-                        </div>
                         <div
-                          class="col-4 services-learn-more-arrow font-weight-500"
-                          dir="rtl"
+                          class="col-12 m-auto font-weight-500 position-relative"
                         >
-                          <i class="fas fa-arrow-right"></i>
+                          <div class="left-card-button">Read More</div>
+                          <div class="right-card-button">&nbsp;</div>
+                          <div class="right-cart-rectangle">&nbsp;</div>
+                          <div class="card-arrow-i">
+                            <i class="fas fa-arrow-right"></i>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -425,14 +429,15 @@
                     </div>
                     <div class="col-11 m-0-5-auto">
                       <div class="row cursor-pointer services-learn-more-row">
-                        <div class="col-8 services-learn-more font-weight-500">
-                          Read More
-                        </div>
                         <div
-                          class="col-4 services-learn-more-arrow font-weight-500"
-                          dir="rtl"
+                          class="col-12 m-auto font-weight-500 position-relative"
                         >
-                          <i class="fas fa-arrow-right"></i>
+                          <div class="left-card-button">Read More</div>
+                          <div class="right-card-button">&nbsp;</div>
+                          <div class="right-cart-rectangle">&nbsp;</div>
+                          <div class="card-arrow-i">
+                            <i class="fas fa-arrow-right"></i>
+                          </div>
                         </div>
                       </div>
                     </div>
